objects/LLC_BI__Statistic__c.object
<CustomObject>
    <description>Contains the statistics data for a related object</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is manually populated. This field indicates the Account associated with the calculated statistic.</description>
        <inlineHelpText>Account that is associated to detail records</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Statistics</relationshipLabel>
        <relationshipName>Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required. It is manually populated. This field indicates the category to which the statistic belongs. The category is used to logically group statistics. The category is used by other components to determine which statistics to use or to display. The value is populated from the LLC_BI__StatisticsConfiguration__c.LLC_BI__Field_Name__c associated with the LLC_BI__StatisticsConfiguration__c record that generated this statistic.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Category for statistic value</inlineHelpText>
        <label>Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Name__c</fullName>
        <description>This field is required. It is manually populated. This field uniquely identifies the statistic within the specified category. The value is populated from the LLC_BI__StatisticsConfiguration__c.LLC_BI__Field_Name__c associated with the LLC_BI__StatisticsConfiguration__c record that generated this statistic.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of statistic field</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is optional. It is manually populated and indicates the Loan associated with the calculated statistic.</description>
        <inlineHelpText>Loan that this statistic belongs to</inlineHelpText>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Statistics</relationshipLabel>
        <relationshipName>Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Month__c</fullName>
        <description>This field is automatically populated. It shows the greatest month (Jan = 1, Dec = 12) in the year that incurred the statistic.</description>
        <label>Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_Currency__c</fullName>
        <description>This field is optional and is manually populated. If specified, it indicates the currency value associated with the statistics record.</description>
        <inlineHelpText>Currency Value for the statistics field</inlineHelpText>
        <label>Value Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_Date__c</fullName>
        <description>This field is optional and is manually populated. If specified, it indicates the date value associated with the statistics record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Value for the statistics field</inlineHelpText>
        <label>Value Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_Number__c</fullName>
        <description>This field is optional and is manually populated. If specified, it indicates the percentage value of the statistic.</description>
        <inlineHelpText>Number Value for the statistics field</inlineHelpText>
        <label>Value Number</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_Percentage__c</fullName>
        <description>This field is optional and is manually populated. If specified, it indicates the text value of the statistic.</description>
        <inlineHelpText>Percentage Value for the statistics field</inlineHelpText>
        <label>Value Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Value_Text__c</fullName>
        <description>This field is optional and is manually populated. If specified, it indicates the year associated with the statistic record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Text Value for the statistics field</inlineHelpText>
        <label>Value Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Year__c</fullName>
        <description>This field is automatically populated. It shows the year that incurred the calculation of this statistic. Every year can only have one record per Category and Field Name.</description>
        <label>Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Statistic</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Category__c</columns>
        <columns>LLC_BI__Field_Name__c</columns>
        <columns>LLC_BI__Loan__c</columns>
        <columns>LLC_BI__Value_Currency__c</columns>
        <columns>LLC_BI__Value_Date__c</columns>
        <columns>LLC_BI__Value_Number__c</columns>
        <columns>LLC_BI__Value_Percentage__c</columns>
        <columns>LLC_BI__Value_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STAT-{00000000}</displayFormat>
        <label>Statistic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>